--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# METHOD 1 - Integrated frontend and backend (no API)"
+    "# Installation and Running"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 1"
    ]
   },
   {
@@ -17,16 +24,106 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -r requirements.txt\n",
-    "!pip install -r app/requirements.txt\n",
-    "!python app/app_no_api.py"
+    "# Download repo\n",
+    "!git clone https://github.com/AnthoneoJ/whisper-jax-frontend.git\n",
+    "%cd whisper-jax-frontend"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# METHOD 2 - Backend only"
+    "Step 2 (GPU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Update to CUDA 12.6\n",
+    "!wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2404/x86_64/cuda-ubuntu2404.pin\n",
+    "!sudo mv cuda-ubuntu2404.pin /etc/apt/preferences.d/cuda-repository-pin-600\n",
+    "!wget https://developer.download.nvidia.com/compute/cuda/12.6.2/local_installers/cuda-repo-ubuntu2404-12-6-local_12.6.2-560.35.03-1_amd64.deb\n",
+    "!sudo dpkg -i cuda-repo-ubuntu2404-12-6-local_12.6.2-560.35.03-1_amd64.deb\n",
+    "!sudo cp /var/cuda-repo-ubuntu2404-12-6-local/cuda-*-keyring.gpg /usr/share/keyrings/\n",
+    "!sudo apt-get update\n",
+    "!sudo apt-get -y install cuda-toolkit-12-6\n",
+    "\n",
+    "!pip install -r requirements_gpu.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 2 (TPU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements_tpu.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Usage 1: Integrated frontend and backend (no API)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!pip install -r app/requirements.txt\n",
+    "!python main.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Usage 2: Backend only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!uvicorn backend_api:app --host 0.0.0.0 --port 8000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Usage 3: Backend only (ngrok)"
    ]
   },
   {
@@ -41,7 +138,6 @@
    "source": [
     "# NOTE: obtain authtoken from https://dashboard.ngrok.com/get-started/your-authtoken\n",
     "\n",
-    "!pip install -r requirements.txt\n",
     "!pip install nest-asyncio pyngrok\n",
     "!ngrok config add-authtoken [YOUR-NGROK-TOKEN]\n",
     "!python server_ngrok.py"
