--- a/main.ipynb
+++ b/main.ipynb
@@ -55,6 +55,7 @@
     "!sudo apt-get update\n",
     "!sudo apt-get -y install cuda-toolkit-12-6\n",
     "\n",
+    "!sudo apt-get install ffmpeg -y\n",
     "!pip install -r requirements_gpu.txt"
    ]
   },
@@ -95,8 +96,20 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -r app/requirements.txt\n",
-    "!python main.py"
+    "!pip install -r app/requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!python3 main.py"
    ]
   },
   {
@@ -139,8 +152,20 @@
     "# NOTE: obtain authtoken from https://dashboard.ngrok.com/get-started/your-authtoken\n",
     "\n",
     "!pip install nest-asyncio pyngrok\n",
-    "!ngrok config add-authtoken [YOUR-NGROK-TOKEN]\n",
-    "!python server_ngrok.py"
+    "!ngrok config add-authtoken [YOUR-NGROK-TOKEN]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!python3 server_ngrok.py"
    ]
   }
  ],
