--- a/main.ipynb
+++ b/main.ipynb
@@ -109,6 +109,20 @@
    },
    "outputs": [],
    "source": [
+    "# Optional - Downgrade Gradio to version<5\n",
+    "!pip install -U \"gradio>=4.44,<5\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "!python3 main.py"
    ]
   },
